--- a/src/App.css
+++ b/src/App.css
@@ -9,13 +9,13 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 7s linear;
   }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: firebrick;
+  min-height: 30vh;
   display: flex;
   flex-direction: column;
   align-items: center;
